<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="yanosik_notification_access">Yanosik i Spotify: dostęp</string>
    <string name="yanosik_access_granted">Dostęp do powiadomień jest włączony.</string>
    <string name="yanosik_access_missing">Brak dostępu do powiadomień. Automatyczny start Yanosika i Spotify zostanie pominięty.</string>
    <string name="yanosik_access_explanation">Android nadaje dostęp do powiadomień aplikacji. Dudu Home sprawdza oznaczenie usługi Yanosika i steruje lokalną sesją Spotify. Nie czyta treści powiadomień ani nazw utworów. Nadanie zgody nie uruchamia żadnej akcji.</string>
    <string name="progress_driving">Rozpoczęcie jazdy</string>
    <string name="progress_already_running">Aplikacja już pracuje. Pomijam ponowne uruchomienie</string>
    <string name="progress_spotify">Spotify</string>
    <string name="progress_priority">Czekam na zakończenie wcześniejszego zadania lub zamknięcie menu</string>
    <string name="progress_expired">Minął czas oczekiwania. Pomijam tę próbę</string>
    <string name="spotify_resuming">Wznawiam muzykę</string>
    <string name="spotify_remote">Spotify wskazuje inne urządzenie. Nie zmieniam odtwarzania</string>
    <string name="spotify_no_session">Spotify nie udostępniło sterowania odtwarzaniem</string>
    <string name="spotify_timeout">Nie potwierdzono odtwarzania muzyki</string>
    <string name="spotify_no_access">Brak dostępu do sterowania Spotify</string>
    <string name="spotify_playing">Spotify odtwarza</string>
    <string name="spotify_starting">Uruchamiam Spotify</string>
    <string name="yanosik_starting">Uruchamiam Yanosika</string>
    <string name="yanosik_access_settings">Ustawienia systemowe</string>
    <string name="yanosik_access_unavailable">Nie można otworzyć ustawień dostępu do powiadomień.</string>
    <string name="progress_target_status_unknown">Nie mogę potwierdzić stanu aplikacji. Pomijam tę próbę.</string>
    <string name="progress_return_checking_route">Sprawdzam trasę powrotu</string>
    <string name="progress_departure">Wyjazd z domu</string>
    <string name="progress_return">Powrót do domu</string>
    <string name="progress_yanosik">Yanosik</string>
    <string name="progress_departure_detail">Potwierdzam ruch w stronę bramy</string>
    <string name="progress_return_detail">Potwierdzam dojazd do bramy</string>
    <string name="progress_cleaning_detail">Potwierdzam wyjazd z osiedla</string>
    <string name="progress_motion_detail">Potwierdzam jazdę</string>
    <string name="progress_stopped">Ruch ustał lub jest zbyt wolny. Potwierdzanie przerwane.</string>
    <string name="progress_bad_gps">Brak wiarygodnego GPS. Potwierdzanie przerwane.</string>
    <string name="progress_stale">Brak aktualnych danych o postępie.</string>
    <string name="progress_wake">Nowy cykl jazdy. Potwierdzanie od początku.</string>
    <string name="progress_configuration">Zmieniono konfigurację. Potwierdzanie przerwane.</string>
    <string name="progress_service_stopped">Monitorowanie zostało zatrzymane.</string>
    <string name="progress_conditions">Warunki się zmieniły. Nie wykonano akcji.</string>
    <string name="progress_cooldown">Nie wykonano połączenia. Trwa blokada ponownej próby.</string>
    <string name="progress_no_number">Nie wykonano połączenia. Brak numeru bramy.</string>
    <string name="progress_no_config">Nie wykonano akcji. Brak konfiguracji.</string>
    <string name="progress_cleaning_blocked">Nie można zarezerwować automatycznego sprzątania.</string>
    <string name="progress_ui_unavailable">Nie wykonano akcji. Ekran był niedostępny.</string>
    <string name="progress_target_unavailable">Yanosik jest niedostępny. Brak ponowienia.</string>
    <string name="progress_request_failed">Nie udało się wysłać żądania uruchomienia.</string>
    <string name="progress_launching">Uruchamiam Yanosika</string>
    <string name="progress_launch_requested">Wysłano żądanie uruchomienia Yanosika.</string>
    <string name="progress_confirmed">Zdarzenie potwierdzone</string>
    <string name="full_cleaning">Pełne sprzątanie</string>
    <string name="full_mop">Mopowanie</string>
    <string name="cleaning_name">Pełne sprzątanie</string>
    <string name="mop_name">Mopowanie</string>
    <string name="mop_setup_missing">Brak rutyny Full Mop w konfiguracji. Wklej uzupełniony pakiet Roborock. Nie uruchomiono żadnej rutyny.</string>
    <string name="mop_starting">Zlecam Full Mop</string>
    <string name="mop_accepted">Zlecono Full Mop</string>
    <string name="mop_failed_title">Nie potwierdzono Full Mop</string>
    <string name="settings">Ustawienia</string>
    <string name="back_to_menu">Wróć do menu</string>
    <string name="roborock_setup_title">Dane dostępowe Roborock</string>
    <string name="roborock_setup_description">Wklej prywatny pakiet konfiguracji. Zapis nie uruchamia sprzątania.</string>
    <string name="roborock_setup_rejected">Roborock odrzucił autoryzację. Wklej nowy pakiet danych.</string>
    <string name="roborock_setup_invalid">Nie udało się zapisać pakietu. Sprawdź format, rutynę i adres API.</string>
    <string name="save_roborock">Zapisz dane</string>
    <string name="cleaning_starting">Zlecam Full Cleaning</string>
    <string name="cleaning_description">Wysyłam polecenie do Roborock.</string>
    <string name="cleaning_accepted">Zlecono Full Cleaning</string>
    <string name="cleaning_accepted_description">Polecenie przyjęte. Postęp sprawdzisz w aplikacji Roborock.</string>
    <string name="cleaning_unknown">Nie potwierdzono wyniku. Polecenie mogło zostać przyjęte. Sprawdź aplikację Roborock przed ponowieniem.</string>
    <string name="cleaning_error">Roborock nie potwierdził zlecenia. Brak automatycznego ponowienia.</string>
    <string name="cleaning_failed_title">Nie potwierdzono Full Cleaning</string>
    <string name="operation_busy">Inna operacja jest w toku. Nie uruchomiono kolejnej.</string>
    <string name="import_failed">Import konfiguracji nie został zakończony. Automatyzacja pozostaje wstrzymana.</string>
    <string name="app_name">Dudu Home</string>
    <string name="open_gate">Otwórz bramę</string>
    <string name="automation_not_configured">Automatyzacja nie jest skonfigurowana. Możesz korzystać z przycisków ręcznych.</string>
    <string name="automation_enabled">Automatyzacja włączona</string>
    <string name="automation_permissions_missing">Automatyzacja wymaga uprawnień systemowych. Otwieranie ręczne jest dostępne.</string>
    <string name="gate_number_title">Ustaw numer bramy</string>
    <string name="gate_number_description">Podaj numer, na który aplikacja ma zadzwonić. Zapiszemy go tylko w prywatnych ustawieniach tej aplikacji.</string>
    <string name="gate_number_hint">Numer telefonu bramy</string>
    <string name="gate_number_invalid">Wpisz od 3 do 15 cyfr. Możesz użyć znaku +, spacji, nawiasów i myślników.</string>
    <string name="gate_number_save_failed">Nie udało się zapisać numeru. Spróbuj ponownie.</string>
    <string name="save_and_continue">Zapisz numer</string>
    <string name="gate_number_saved_title">Numer zapisany</string>
    <string name="gate_number_saved_description">Numer zapisany. Otwieranie będzie dostępne po 60 sekundach.</string>
    <string name="retry_too_soon_title">Odczekaj chwilę</string>
    <string name="retry_too_soon_description">Dla bezpieczeństwa kolejna próba będzie dostępna za około %1$d s.</string>
    <string name="state_starting">Sprawdzam telefon</string>
    <string name="state_starting_description">Przygotowuję bezpieczną próbę.</string>
    <string name="state_error">Nie udało się wysłać sygnału</string>
    <string name="retry">Ponów</string>
    <string name="close">Zamknij</string>
    <string name="success_icon_description">Sukces</string>
    <string name="error_icon_description">Błąd</string>
    <string name="error_message_format">%1$s\n\nKod: %2$s</string>
    <string name="navigation_title">Nawigacja</string>
    <string name="navigation_go">Jedź z Google Maps</string>
    <string name="navigation_slot">Miejsce %1$d</string>
    <string name="navigation_empty">Brak konfiguracji</string>
    <string name="navigation_import">Wczytaj miejsca z pliku</string>
    <string name="navigation_empty_help">Dodaj miejsce w pliku konfiguracji, a następnie wybierz Ustawienia → Wczytaj miejsca z pliku.</string>
    <string name="navigation_imported">Miejsca zapisane</string>
    <string name="navigation_import_failed">Nie udało się wczytać miejsc. Sprawdź plik JSON. Poprzednia konfiguracja została zachowana.</string>
    <string name="navigation_invalid">Nie można odczytać miejsc. Wczytaj poprawny plik konfiguracji.</string>
    <string name="navigation_loading">Wczytywanie miejsc…</string>
    <string name="navigation_picker_missing">Na urządzeniu brakuje aplikacji do wyboru plików.</string>
    <string name="navigation_maps_missing">Google Maps nie jest zainstalowane lub jest wyłączone.</string>
    <string name="navigation_launch_failed">Nie udało się uruchomić Google Maps.</string>
    <string name="navigation_storage_failed">Nie udało się zapisać stanu nawigacji. Spróbuj ponownie.</string>
    <plurals name="navigation_places">
        <item quantity="one">%d miejsce · Wybierz lokalizację</item>
        <item quantity="few">%d miejsca · Wybierz lokalizację</item>
        <item quantity="many">%d miejsc · Wybierz lokalizację</item>
        <item quantity="other">%d miejsc · Wybierz lokalizację</item>
    </plurals>
    <string name="navigation_choose">Wybierz miejsce</string>
    <string name="navigation_close">Zamknij wybór lokalizacji</string>
    <string name="navigation_drive">Jedź</string>
    <string name="navigation_choice_help">Wybór miejsca uruchomi nawigację w Google Maps.</string>
    <string name="trip_title">Gdzie jestem</string>
    <string name="trip_start">Rozpocznij</string>
    <string name="trip_end">Zakończ</string>
    <string name="trip_permissions">Brak uprawnień lokalizacji lub powiadomień. Sprawdź instalację.</string>
    <string name="trip_full_name">Pełna nazwa</string>
    <string name="cancel_attempt">Anuluj tę próbę</string>
    <string name="cancelling_attempt">Przerywam…</string>
    <string name="attempt_cancelled">Anulowano tę próbę</string>
    <string name="attempt_command_sent">Polecenie już wysłane. Zatrzymano dalsze kroki</string>
    <string name="progress_media_group">Yanosik i Spotify</string>
</resources>
